--- a/Clase/u2e(NE)/Ejercicio3_5.html
+++ b/Clase/u2e(NE)/Ejercicio3_5.html
@@ -1,6 +1,9 @@
 <html>
 <script>
     var num = prompt("Introduce el número");
+    if(num<1||num>10000){
+        num = prompt("Introduce el número");
+    }
     var resultado = "SI";
     if (num % 2 == 0) {
         resultado = "NO"
