--- a/DWEC/Mision1/1_SintaxisJavascript/u1e3_geometria.html
+++ b/DWEC/Mision1/1_SintaxisJavascript/u1e3_geometria.html
@@ -7,7 +7,13 @@
     <script src="variables_geometria.js"></script>
 </head>
 <body>
-    
+    <script>
+        //Entendiendo como invocar al llamar una funcion dentro de los archivos js
+        console.log(areaTriangulo(base,altura));
+
+        //llamada al otro archivo
+        llamada();
+    </script>
     
 </body>
 </html>
