--- a/DWEC/Mision1/1_SintaxisJavascript/u1e5_condicionales.html
+++ b/DWEC/Mision1/1_SintaxisJavascript/u1e5_condicionales.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Condicionales</title>
 </head>
 
 <body>
@@ -12,7 +11,7 @@
     <script>
         respuesta1 = prompt("¿Es una localidad con más de 30000 habitantes?(Responde con SI O NO )");
         respuesta2 = prompt("¿Vive algún alumno de clase?(Responde con SI o NO)");
-        var pueblo1="Galapagar", pueblo2="Valdemorillo", pueblo3="El Escorial", pueblo4="Colmenarejo";
+        var pueblo1="Galapagar", pueblo2="Valdemoro", pueblo3="El Escorial", pueblo4="Colmenarejo";
 
         if (respuesta1 === "SI") {//descartamos pueblo3 y pueblo4
 
