--- a/DWEC/Mision1/1_SintaxisJavascript/u1e8_bucles.html
+++ b/DWEC/Mision1/1_SintaxisJavascript/u1e8_bucles.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="fcontrasenia.js"></script>
+    <!-- Llamada a las funciones -->
+    <script src="fcontrasenia.js"></script> 
 </head>
 <body>
     <script>
-        //contrasenia1();
+        //contrasenia1(); comentafda para comprobar la segunda función 
         contrasenia2();
 
     </script>
