--- a/DWEC/Mision1/1_SintaxisJavascript/u1e6_buclesFor.html
+++ b/DWEC/Mision1/1_SintaxisJavascript/u1e6_buclesFor.html
@@ -8,11 +8,11 @@
 
     <script>
 
-        for(var i=8;i<=20;i++){
+        for(var i=8;i<=20;i++){//Bucle que indica las horas
 
-            for(var j=0;j<=45;j+=15) {
+            for(var j=0;j<=45;j+=15) {//Buble que indica los minutos 
 
-                if(i<10){
+                if(i<10){//Horas menores de 10
                     if(j==0){
                         document.write("<h2>0"+i+":0"+j+"<\h2>");
 
@@ -26,7 +26,7 @@
                         document.write("<h2>"+i+":0"+j+"<\h2>");
 
                     }else{
-                        if(i==20&&j==45){
+                        if(i==20&&j==45){//Evitar hora 20:45
                             break;
                         }
                         document.write("<h2>"+i+":"+j+"<\h2>");
