--- a/Clase/UD02_Sintaxis_Codigo/01_holamundo.html
+++ b/Clase/UD02_Sintaxis_Codigo/01_holamundo.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script src="01_holamundo.js"></script>
+	<head>	
+		<script src="01_holamundo.js"></script>  <!-- hereda del js -->
 	</head>
 
 	<body>
 
 		<h1>Bienvenido al curso de Javascript</h1>
 		<script>
-			holamundo();
+			holamundo(); //función sin argumentos
 		</script>
 		<h1> Hasta luego</h1>
 	</body>
