--- a/DWEC/Mision2/u3e3_math.html
+++ b/DWEC/Mision2/u3e3_math.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LOTERIA</title>
     <script src="loteria.js"></script>
 </head>
+
 <body>
-    
+    <script>
+
+        generarLoteria();
+
+    </script>
+
 </body>
+
 </html>
