--- a/DWEC/Mision2/u3e4_date.html
+++ b/DWEC/Mision2/u3e4_date.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOLSTICIO</title>
     <script src="solsticio.js"></script>
 </head>
+
 <body>
+    <h1>Solsticios de Verano en Sábado</h1>
     
+    <p id="resultado"></p>
 </body>
+<script>
+    mostrarSolsticios();
+</script>
+
 </html>
