--- a/DWEC/Mision2/u3e1_string.html
+++ b/DWEC/Mision2/u3e1_string.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NOMBRE</title>
     <script src="nombre.js"></script>
 </head>
+
 <body>
-    
+    <script>
+        generarNombreUsuario();
+
+    </script>
+
 </body>
+
 </html>
