--- a/DWEC/Mision2/u3e2_number.html
+++ b/DWEC/Mision2/u3e2_number.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BASES</title>
     <script src="numeros.js"></script>
 </head>
+
 <body>
-    
+    <script>
+        convertirBases();
+
+    </script>
+
+
 </body>
+
 </html>
